--- a/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
+++ b/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
@@ -15,7 +15,7 @@ permalink: 'slik-gjor-du-det/klagerettigheter/index.html'
       </div>
       <h1 class="font-extrabold text-4xl/tight text-balance text-[#99185E]">{{ title | safe }}</h1>
       <div class="mt-6 prose text-pretty max-w-prose">
-        <p class="text-lg/snug">{{ ingress | safe }}</p>
+        <p class="text-lg/normal">{{ ingress | safe }}</p>
 
         {% if audience %}          
         <div class="leading-normal bg-white border  border-slate-300 text-balance {{ 'px-4 py-3 rounded-lg' if audience.style === 'default' }} {{'px-4 py-1 rounded-full w-fit' if audience.style === 'simple' }}">
