--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -31,7 +31,7 @@ permalink: 'produkt/sykepenger/index.html'
 
     {# Innholdsfortegnelse #}
     <div class="px-5 py-4 mt-8 border-t-[0.625ch] border-[#99185E] rounded-b-lg bg-[#FEF5F1]" x-intersect:leave="showTopAnchor = true" x-intersect:enter.margin.-400px.0.0.0="showTopAnchor = false">
-      <h2 class="pb-2 text-sm font-semibold">Innhold på siden</h2>
+      <h2 class="pb-2 text-base font-semibold">Innhold på siden</h2>
       <ul class="grid gap-4 py-1">
         {% for chapter in chapters.slice(0, -1) %}
         <li class="grid">
@@ -44,52 +44,6 @@ permalink: 'produkt/sykepenger/index.html'
         {% endfor %}
       </ul>
     </div>
-
-    {# Sticky Chapter TOC #}
-    {# <div 
-      class="sticky top-0 z-10 isolate col-main" 
-      aria-hidden="true"
-      x-show="showToc"
-      x-transition:enter="transition ease-out duration-200"
-      x-transition:enter-start="opacity-0 -translate-y-full"
-      x-transition:enter-end="opacity-100 translate-y-0"
-      x-on:click.outside="expandToc = false"
-    >
-      <button class="relative mx-auto z-20 mt-2 flex items-center justify-center gap-1 pl-5 pr-3.5 py-2.5 whitespace-nowrap bg-slate-500 text-white" x-bind:class="expandToc ? 'w-full rounded-t-xl hover:bg-slate-600' : 'rounded-full shadow-lg'" type="button" x-on:click="expandToc = !expandToc">
-        <span>Innhold på siden</span>
-        {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5') | safe }}
-      </button>
-      <div 
-        class="absolute inset-x-0 z-10 px-5 pt-20 pb-8 text-white rounded-xl top-2 bg-slate-500 grid-cols-combi" 
-        x-bind:class="expandToc ? 'bg-slate-100 shadow-lg' : 'hidden'"
-      >
-        <ol class="grid gap-3 toc toc--multi toc--sticky">
-          {% for chapter in chapters %}
-          <li class="grid">
-            <a 
-              class="flex gap-1 p-1 -m-1 font-medium text-white underline group text-base/snug hover:decoration-2" 
-              href="#{{ chapter.data.title | slugify }}" 
-              x-on:click="expandToc = false"
-            >
-              {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
-              {{ chapter.data.title }}
-            </a>
-            <p class="pr-4 pl-6 mt-0.5 text-pretty opacity-80">{{ chapter.data.ingress | safe }}</p>
-          </li>
-          {% endfor %}
-          <li class="pt-4 mt-1 border-t border-slate-400/25">
-            <a 
-              class="flex gap-1 p-1 text-white underline group text-base/snug hover:decoration-2" 
-              href="{{ page.url }}" 
-              x-on:click="expandToc = false"
-            >
-              {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
-              Til toppen av siden
-            </a>
-          </li>
-        </ol>
-      </div>
-    </div> #}
 
     {# Innhold #}
     {% for chapter in chapters %}
@@ -105,7 +59,7 @@ permalink: 'produkt/sykepenger/index.html'
         {# Chapter TOC #}
         {% if chapter.templateContent and chapter.templateContent | tocData | length > 0 and not chapter.data.hideToc %}
         <nav class="relative px-5 pt-3 pb-4 mb-8 rounded-lg bg-[#FEF5F1]">
-          <h3 class="pb-2 text-sm font-semibold">I dette kapittelet</h3>
+          <h3 class="pb-2 text-base font-semibold">I dette kapittelet</h3>
           <ul class="grid gap-2 mt-1 justify-items-start">
             {% for item in chapter.templateContent | tocData %}
             <li>
@@ -136,19 +90,6 @@ permalink: 'produkt/sykepenger/index.html'
     {% endfor %}
 
     <div class="pt-2 my-12 text-sm italic border-t border-slate-200 col-main">{{ published | safe }}</div>
-
-    {# <div 
-      class="sticky z-20 hidden mx-auto mb-8 bottom-3 sm:grid sm:items-center" 
-      x-show="showTopAnchor" 
-      x-transition:enter="transition duration-200 ease-in"
-      x-transition:enter-start="translate-y-6 opacity-0"
-      x-transition:enter-end="translate-y-0 opacity-100"
-    >
-      <a href="#toppen" class="inline-flex items-center justify-center gap-1 py-3 pl-3 pr-5 mx-auto text-sm leading-tight text-center text-white rounded-full ring-4 ring-white hover:underline bg-deepblue-400">
-        {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('w-5 h-5 -translate-y-px') | safe }}
-        <span>Til toppen av siden</span>
-      </a>
-    </div> #}
 
   </main>
 
