--- a/src/pages/omrade/arbeid/arbeid.njk
+++ b/src/pages/omrade/arbeid/arbeid.njk
@@ -13,7 +13,7 @@ contactTheme: white
       <div class="relative flex items-end justify-between col-container">
         <div class="flex-1 pt-8 pb-6">
           {# <div class="tracking-widest small-caps">{{ category | safe }}</div> #}
-          <h1 class="font-extrabold tracking-tight text-4xl/tight text-pretty text-[#99185E]">
+          <h1 class="font-extrabold tracking-tight text-4xl/tight text-pretty text-brand-purple-deep">
             {{ title | safe }}
           </h1>
           <h2 class="col-span-2 col-start-1 text-lg text-pretty xs:col-start-1 xs:col-span-1 max-w-prose ">Hva er situasjonen din?</h2>
@@ -22,10 +22,10 @@ contactTheme: white
       </div>
     </div>
 
-    <div class="grid pt-12 pb-12 grid-cols-combi bg-[#FEF5F1]">
+    <div class="grid pt-12 pb-12 grid-cols-combi bg-brand-beige">
       <ul class="grid col-container md:grid-cols-2 md:gap-x-12">
         {%- for item in situationList -%}
-          <li class="relative flex items-center justify-between text-pretty gap-8 py-4 -mt-px border-t border-b bg-[#FEF5F1] border-slate-300/75">
+          <li class="relative flex items-center justify-between gap-8 py-4 -mt-px border-t border-b text-pretty bg-brand-beige border-slate-300/75">
             <div class="grid gap-0.5">
               <h3><a class="font-normal text-blue-600 text-lg/normal hover:text-blue-600 hover:underline hover:decoration-2 after:absolute after:inset-0" href="#">
                 {{ item.title | safe }}
