Oppdatert utseende på lenkekort og ekspanderende moduler

--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -11,7 +11,7 @@ permalink: 'produkt/sykepenger/index.html'
 
   <main class="grid pt-16 pb-4 grid-cols-combi" data-theme="sykepenger" x-data="{ showTopAnchor: false }">
     <div class="col-main">
-      <div class="mb-3 sm:absolute sm:-ml-32 sm:mt-3" style="--pictogram: #F5D3E2;">
+      <div class="mb-3 md:absolute md:-ml-32 sm:mt-3" style="--pictogram: #F5D3E2;">
         {{ '/src/_includes/svg/piktogrammer/produkter/sykepenger.svg' | svgContents('text-brand-purple-deep w-16 h-16 sm:w-24 sm:h-24') | safe  }}
       </div>
       <div class="text-base font-medium tracking-widest small-caps">
