--- a/src/_includes/macros/tile.njk
+++ b/src/_includes/macros/tile.njk
@@ -1,13 +1,13 @@
 {% macro tile(args) %}
-<div class="relative px-5 py-4 rounded-lg group leading-tight bg-slate-100  {{ args.theme or "has-[a:hover]:bg-blue-50/75 has-[a:active]:bg-blue-50" }}">
+<div class="relative pl-5 pr-16 py-4 rounded-lg group leading-tight bg-white border border-slate-300  {{ args.theme or "has-[a:hover]:bg-blue-50 has-[a:active]:bg-blue-50" }}">
   <a class="z-10 flex-1 text-base font-semibold no-underline text-pretty after:absolute after:inset-0 hover:underline hover:decoration-2" href="#">
-    {{ args.title }}&nbsp;{{ '/src/_includes/svg/icons/arrow-right.svg' | svgContents('w-5 h-5 shrink-0 inline -translate-y-px') | safe }}
+    {{ args.title }}
   </a>
   {%- if args.kicker %}
-  <p class="font-medium leading-tight tracking-wider pointer-events-none opacity-70 small-caps">
+  <p class="font-medium leading-none mt-0.5 tracking-wider pointer-events-none opacity-70 small-caps">
     {%- for item in args.kicker %}{{ item }}{{ ', ' if not loop.last }}{% endfor -%}
   </p>
   {%- endif %}
-  {# <div class="absolute inset-y-0 left-0 w-1 rounded-l bg-brand-purple-deep"></div> #}
+  {{ '/src/_includes/svg/icons/arrow-right.svg' | svgContents('w-5 h-5 shrink-0 absolute my-auto inset-y-0 right-5 text-blue-600') | safe }}
 </div>
 {% endmacro %}
