--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -227,15 +227,15 @@
   .accordion summary:before {
     background-color: theme('colors.blue.50');
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgb(0 103 197 / 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
-    background-position: center;
     background-repeat: no-repeat;
+    background-position: center;
     content: "";
     display: inline-block;
     flex-shrink: 0;
     place-items: center;
     translate: 0 4px;
     margin-inline-end: 10px;
-    border-radius: 99px;
+    border-radius: theme('borderRadius.xl');
     transition: rotate 150ms;
     width: 24px;
     height: 24px;
