--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -17,7 +17,7 @@ permalink: 'produkt/sykepenger/index.html'
       <div class="text-base font-medium tracking-widest small-caps">
         {{ category | safe }}
       </div>
-      <h1 class="font-extrabold text-4xl/tight text-pretty text-brand-purple-deep">{{ title | safe }}</h1>
+      <h1 class="font-bold text-4xl/tight text-pretty text-brand-purple-deep">{{ title | safe }}</h1>
       <div class="mt-6 prose text-pretty max-w-prose">
         <p class="text-lg/normal">{{ ingress | safe }}</p>
 
