--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="no" class="h-full antialiased bg-white font-[390] font-sans motion-safe:scroll-smooth scroll-pt-16">
+<html lang="no" class="h-full font-sans bg-white font-[360] tracking-[0.0125em] motion-safe:scroll-smooth scroll-pt-16">
   <head>
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex" />
