--- a/src/pages/omrade/arbeid/arbeid.njk
+++ b/src/pages/omrade/arbeid/arbeid.njk
@@ -12,7 +12,7 @@ contactTheme: white
     <div class="grid grid-cols-combi">
       <div class="relative flex items-end justify-between col-container">
         <div class="flex-1 pt-8 pb-6">
-          {# <div class="tracking-widest small-caps">{{ category | safe }}</div> #}
+          {# <div class="tracking-wider text-gray-700 small-caps">{{ category | safe }}</div> #}
           <h1 class="font-extrabold tracking-tight text-4xl/tight text-pretty text-brand-purple-deep">
             {{ title | safe }}
           </h1>
