--- a/src/pages/situasjon/barn/barn.njk
+++ b/src/pages/situasjon/barn/barn.njk
@@ -13,7 +13,7 @@ permalink: 'situasjon/barn/index.html'
       <div class="mb-3 sm:absolute sm:-ml-32 sm:mt-3" style="--pictogram: #F9D8E7">
         {{ '/src/_includes/svg/piktogrammer/produkter/sykepenger.svg' | svgContents('text-brand-purple-deep w-16 h-16 sm:w-24 sm:h-24') | safe  }}
       </div>
-      <div class="text-base font-medium tracking-widest small-caps">
+      <div class="text-base font-normal tracking-wider text-gray-700 small-caps">
         {{ category | safe }}
       </div>
       <h1 class="font-extrabold text-4xl/tight text-pretty text-brand-purple-deep">{{ title | safe }}</h1>
