--- a/src/pages/omrade/helse-og-sykdom/helse-og-sykdom.njk
+++ b/src/pages/omrade/helse-og-sykdom/helse-og-sykdom.njk
@@ -12,7 +12,7 @@ contactTheme: white
     <div class="grid grid-cols-combi">
       <div class="relative flex items-end justify-between col-container">
         <div class="flex-1 pt-8 pb-6">
-          {# <div class="tracking-widest small-caps">{{ category | safe }}</div> #}
+          {# <div class="tracking-wider text-gray-700 small-caps">{{ category | safe }}</div> #}
           <h1 class="-translate-x-[0.05em] font-extrabold text-4xl/tight text-pretty text-brand-purple-deep">{{ title | safe }}</h1>
           <h2 class="col-span-2 col-start-1 mt-1 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
         </div>
