--- a/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
+++ b/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
@@ -10,7 +10,7 @@ permalink: 'slik-gjor-du-det/klagerettigheter/index.html'
 
   <main class="grid pt-16 grid-cols-combi" data-theme="sykepenger" x-data="{ showTopAnchor: false }">
     <div class="col-main">
-      <div class="text-base font-medium tracking-widest small-caps">
+      <div class="text-base font-normal tracking-wider text-gray-700 small-caps">
         {{ category | safe }}
       </div>
       <h1 class="font-extrabold text-4xl/tight text-balance text-brand-purple-deep">{{ title | safe }}</h1>
