--- a/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
+++ b/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
@@ -45,15 +45,18 @@ permalink: 'slik-gjor-du-det/klagerettigheter/index.html'
       {% set chapterIndex = loop.index %}
       <section class="grid grid-flow-row-dense mt-16 col-full grid-cols-combi " id="{{ chapter.data.title | slugify }}">
         <div class="grid mt-8 mb-4 col-full grid-cols-combi">
-          <div class="w-10 h-[0.675ch] bg-brand-purple-faded mb-5 mt-5"></div>
-          <h2 class="font-bold text-3xl/tight text-balance text-brand-purple-deep">
-            <a href="#{{ chapter.data.title | slugify }}">{{ chapter.data.title }}</a>
-          </h2>
+          <div class="w-10 h-[0.675ch] bg-brand-purple-faded my-5"></div>
+          <div class="relative inline-flex pl-[2ch] mb-4 -ml-[2ch] font-bold text-3xl/tight group/anchor">
+            <h2 class="text-balance text-brand-purple-deep">
+              {{ chapter.data.title }}
+            </h2>
+            <a href="#{{ chapter.data.title | slugify }}" class="absolute inset-x-0 hidden w-full px-2 group-hover/anchor:block text-brand-purple-faded">#</a>
+          </dev>
         </div>
 
         {# Chapter TOC #}
         {% if chapter.templateContent and chapter.templateContent | tocData | length > 0 and not chapter.data.hideToc %}
-        <nav class="relative px-5 pt-3 pb-4 mt-4 mb-8 rounded-lg bg-brand-beige">
+        <nav class="relative px-5 pt-3 pb-4 mb-8 rounded-lg bg-brand-beige">
           <h3 class="pb-2 font-semibold">I dette kapittelet</h3>
           <ul class="grid gap-2 mt-1 justify-items-start">
             {% for item in chapter.templateContent | tocData %}
