--- a/src/pages/seksjon/seksjon.njk
+++ b/src/pages/seksjon/seksjon.njk
@@ -1,6 +1,7 @@
 ---
 title: 'Spørsmål til oss'
 description: 'Listeside …'
+type: 'Seksjon'
 tags: ['listeside', 'proto']
 permalink: '/seksjon/index.html'
 ingress: 'Her kan du skrive til NAV om saken din.'
