--- a/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
+++ b/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
@@ -46,11 +46,11 @@ permalink: 'slik-gjor-du-det/klagerettigheter/index.html'
       <section class="grid grid-flow-row-dense mt-16 col-full grid-cols-combi " id="{{ chapter.data.title | slugify }}">
         <div class="grid mt-8 mb-4 col-full grid-cols-combi">
           <div class="w-10 h-[0.675ch] bg-brand-purple-faded my-5"></div>
-          <div class="relative inline-flex pl-[2ch] mb-4 -ml-[2ch] font-bold text-3xl/tight group/anchor">
-            <h2 class="text-balance text-brand-purple-deep">
+          <div class="relative sm:pl-[2.25ch] mb-4 sm:-ml-[2.25ch] font-bold text-3xl/tight group/anchor">
+            <h2 class="inline text-balance text-brand-purple-deep">
               {{ chapter.data.title }}
             </h2>
-            <a href="#{{ chapter.data.title | slugify }}" class="absolute inset-x-0 hidden w-full px-2 group-hover/anchor:block text-brand-purple-faded">#</a>
+            <a href="#{{ chapter.data.title | slugify }}" class="hidden px-2 py-2 -mt-2 text-blue-600 sm:absolute sm:left-0 group-hover/anchor:inline">#</a>
           </dev>
         </div>
 
