--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -109,11 +109,11 @@
   :where(.prose) > :is(p, ul, ol) {
     text-wrap: pretty;
   }
-  :where(.prose) > * a {
+  :where(.prose) > * :where(a) {
     color: theme('colors.blue.600');
     text-decoration-line: underline;
   }
-  :where(.prose) > * a:hover {
+  :where(.prose) > * :where(a:hover) {
     text-decoration-thickness: 2px;
   }
 
